fixed small layout issues

--- a/client/src/components/Core/CoursedyWarning/CoursedyWarning.module.scss
+++ b/client/src/components/Core/CoursedyWarning/CoursedyWarning.module.scss
@@ -2,8 +2,9 @@
   background-color: #FFFBEE;
   border: 1px solid #FDC100;
   border-radius: 2px;
-  padding: 10px 20px;
+  padding: 3px 15px;
   margin-bottom: 10px;
+  font-size: 12px;
   .message {
     margin-left: 10px;
     color: #FDC100;
