--- a/client/styles/global_style.scss
+++ b/client/styles/global_style.scss
@@ -92,7 +92,7 @@ $color-bg-dark-light: #424e55;
 
 $color-blue-light: #02cbf7;
 $color-blue-dark: #0099E5;
-$color-hightlight: #007791;
+$color-highlight: #007791;
 
 $color-gray-light: #c2c0c0;
 
